// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp should be render 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`GifExpertApp should show a category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Star Wars"
    key="Star Wars"
  />
</Fragment>
`;
